# BEAM-Net

./: .env  Dockerfile  docker-compose.yml  fix_typo.py  fix_unicode.py  pyproject.toml  readme.md  requirements.txt
beam_net/: __init__.py
configs/: experiment.yaml
dags/: beam_net_pipeline.py
results/: best_model.pt  evaluation_results.json  training_history.json
sql/: readme.md
sql/init/: 01_create_databases.sql  02_grant_permissions.sql
sql/migrations/: V001__beam_metrics_schema.sql  V002__add_uncertainty_tables.sql  V003__add_energy_tracking.sql
sql/queries/: energy_scaling_report.sql  experiment_comparison.sql  reliability_diagram.sql  sparsity_evolution.sql
src/: bayesian_lif.py  beam_net.py  bidirectional_inference.py  config.py  data_loader.py  dirichlet_attention.py  energy_profiler.py  evaluate.py  parquet_analyzer.py  parquet_logger.py  readme.md  report_generator.py  temporal_encoder.py  train.py  utils.py
